# weather-or-not

./: Cargo.toml  README.md
src/: app_state.rs  main.rs
src/open_weather_map/: air_quality_response.rs  five_days_forecast_response.rs  geocoding_response.rs  mod.rs  open_weather_map_api.rs  weather_response.rs
src/routes/: forecast.rs  home.rs  locations.rs  mod.rs  weather.rs
templates/: base.html  forecast.html  home.html  locations_list.html  weather.html
