[package]
name = "weather-or-not"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
shuttle-axum = "0.36.0"
shuttle-runtime = "0.36.0"
shuttle-secrets = "0.36.0"
tokio = "1.28.2"
tracing = "0.1.40"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
http = "1.0.0"
chrono = "0.4.31"